[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/base_block.gd" type="Script" id=1]
[ext_resource path="res://Scripts/grey_block/blockcolor.gd" type="Script" id=2]
[ext_resource path="res://Scripts/exploding_block/text.gd" type="Script" id=3]
[ext_resource path="res://Scripts/exploding_block/RayCast2D.gd" type="Script" id=4]
[ext_resource path="res://Scripts/exploding_block/Area2D.gd" type="Script" id=5]
[ext_resource path="res://Sounds/beep.wav" type="AudioStream" id=6]
[ext_resource path="res://Scripts/exploding_block/fuse_audio.gd" type="Script" id=7]
[ext_resource path="res://Sprites/blockoutline.png" type="Texture" id=8]
[ext_resource path="res://Scripts/exploding_block/outline.gd" type="Script" id=9]
[ext_resource path="res://Sounds/drop.wav" type="AudioStream" id=10]
[ext_resource path="res://Scripts/grey_block/dropsound.gd" type="Script" id=11]
[ext_resource path="res://Scripts/exploding_block/exploding_block.gd" type="Script" id=12]
[ext_resource path="res://Fonts/slkscrb.ttf" type="DynamicFontData" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 1, 0, 0, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )
width = 32

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 13 )

[node name="base" type="RigidBody2D"]
collision_layer = 17
collision_mask = 2147483664
mode = 3
custom_integrator = true
script = ExtResource( 1 )

[node name="exploding_block" type="Node2D" parent="."]
script = ExtResource( 12 )
__meta__ = {
"_edit_group_": true
}

[node name="collision_shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="delay_time" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="blockcolor" type="Sprite" parent="."]
scale = Vector2( 1, 32 )
texture = SubResource( 3 )
script = ExtResource( 2 )

[node name="text" type="Label" parent="."]
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blockunder" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 16 )
script = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="."]
monitorable = false
script = ExtResource( 5 )

[node name="collision_shape2" type="CollisionShape2D" parent="Area2D"]
scale = Vector2( 1.2, 1.2 )
shape = SubResource( 1 )

[node name="down" type="RayCast2D" parent="."]
pause_mode = 2
enabled = true
cast_to = Vector2( 0, 32 )
collision_mask = 16

[node name="up" type="RayCast2D" parent="."]
pause_mode = 2
enabled = true
cast_to = Vector2( 0, -32 )
collision_mask = 16

[node name="left" type="RayCast2D" parent="."]
pause_mode = 2
enabled = true
cast_to = Vector2( -32, 0 )
collision_mask = 16

[node name="right" type="RayCast2D" parent="."]
pause_mode = 2
enabled = true
cast_to = Vector2( 32, 0 )
collision_mask = 16

[node name="rayUp" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -47 )

[node name="rayUpRight" type="RayCast2D" parent="."]
position = Vector2( 32, -32 )
enabled = true
cast_to = Vector2( 15, -15 )

[node name="rayUpLeft" type="RayCast2D" parent="."]
position = Vector2( -32, -32 )
enabled = true
cast_to = Vector2( -15, -15 )

[node name="rayDown" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 47 )

[node name="rayDownLeft" type="RayCast2D" parent="."]
position = Vector2( -32, 32 )
enabled = true
cast_to = Vector2( -15, 15 )

[node name="rayDownRight" type="RayCast2D" parent="."]
position = Vector2( 32, 32 )
enabled = true
cast_to = Vector2( 15, 15 )

[node name="rayLeft" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -47, 0 )

[node name="rayRight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 47, 0 )

[node name="fuse_audio" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 6 )
volume_db = -10.0
bus = "SFX"
script = ExtResource( 7 )

[node name="outline" type="Sprite" parent="."]
pause_mode = 2
texture = ExtResource( 8 )
hframes = 15
script = ExtResource( 9 )

[node name="dropsound" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 10 )
volume_db = -10.0
bus = "Drops"
script = ExtResource( 11 )
[connection signal="timeout" from="delay_time" to="exploding_block" method="_on_delay_time_timeout"]
[connection signal="timeout" from="delay_time" to="exploding_block" method="_on_fuse_time_timeout"]
[connection signal="body_entered" from="Area2D" to="exploding_block" method="_on_Area2D_body_entered"]
